[package]
name = "aoc-solutions"
version = "0.1.0"
authors = ["sindrekjr <sindrekjr@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solutions"
crate-type = ["cdylib"]

[dependencies]
take-until = "0.2.0"
